<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_8"
    android:layout_marginBottom="@dimen/dp_8"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/confetti"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:src="@drawable/confetti" />

            <TextView

                android:id="@+id/tv_btn_add_photo_camera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:backgroundTint="@android:color/white"
                android:drawablePadding="@dimen/dp_32"
                android:gravity="center"
                android:text="@string/your_order_is_complete"
                android:textColor="@color/black"
                android:textSize="@dimen/toolbar_title" />

            <Button
                android:id="@+id/orderConfirmationClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/explore_more" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

</LinearLayout>